<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sk.finishersapps.finisher.lovemydogo.acitivities.MainMenuActivity">

    <Button
        android:id="@+id/mmaVets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corners"
        android:onClick="findVetsClicked"
        android:text="Find Vets"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mmaParks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corners"
        android:onClick="findParksClicked"
        android:text="Find dog parks"
        android:textStyle="bold" />

    <Button
        android:id="@+id/mmaStores"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_round_corners"
        android:onClick="findStoresClicked"
        android:text="Find Pet stores"
        android:textStyle="bold" />

    <RelativeLayout
        android:id="@+id/mmaDistancePickerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#eddd"
        android:onClick="emptyClicker"
        android:visibility="invisible">

        <TextView
            android:id="@+id/mmaDistanceTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="#000" />

        <SeekBar
            android:id="@+id/mmaDistanceSeekBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/mmaConfirmDistanceButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/green_round_corners"
            android:onClick="searchClicked"
            android:text="Search" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mmaSearchResultsLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="invisible">

        <TextView
            android:id="@+id/mmaHeaderText"
            android:textStyle="bold"
            android:text="@string/results"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <ProgressBar
            android:id="@+id/mmaResultsProgressBar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:visibility="invisible" />

        <ScrollView
            android:id="@+id/mmaResultsScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:id="@+id/mmaResultsListLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="?android:dividerHorizontal"
                android:orientation="vertical"
                android:showDividers="middle" />
        </ScrollView>

        <Button
            android:id="@+id/mmaCheckResultsOnMapButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:onClick="checkResultsOnMapClickced"
            android:text="Check on map" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mmaWayOfTransportPickerOuternLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#9000"
        android:onClick="emptyClicker"
        android:visibility="invisible">


        <RelativeLayout
            android:id="@+id/mmaWayOfTransportBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#000">


        </RelativeLayout>

        <TextView
            android:id="@+id/mmaChooseWayOfTransportHeader"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:text="Choose way of transport"
            android:textColor="#fff" />

        <Button
            android:id="@+id/mmaBusButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="showBusClicked"
            android:text="Bus"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mmaBicycleWalkButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="walkClicked"
            android:text="Walk/Bicycle"
            android:textColor="#fff"
            android:textStyle="bold" />

        <Button
            android:id="@+id/mmaCarButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="carClicked"
            android:text="Car"
            android:textColor="#fff"
            android:textStyle="bold" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/mmaBusDataOuternLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff"
        android:visibility="invisible">

        <ProgressBar
            android:id="@+id/mmaBusProgress"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

        <RelativeLayout
            android:id="@+id/mmaBusDataLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mmaClosestLocalBusStopName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000" />

            <TextView
                android:id="@+id/mmaClosestDestinationBusStopName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="#000" />

            <Button
                android:id="@+id/mmaBusNavigateButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="busNavigateClicked"
                android:text="Navigate"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mmaBusCheckConnectionsButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="checkOnImhdClicked"
                android:text="Check on imhd"
                android:textStyle="bold" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>
